[tool.poetry]
name = "cloudwatch-to-graphite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.13.6"
graphyte = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
safety = "^1.9.0"
pycodestyle = "^2.5.0"
pytest-cov = "^2.8.1"
mypy = "^0.770"
pytest = "^5.4.2"
pytest-pycodestyle = "^2.1.3"
pytest-black = "^0.3.9"
mock = "^4.0.2"
freezegun = "^0.3.15"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
